--- a/.github/workflows/ut_check.yml
+++ b/.github/workflows/ut_check.yml
@@ -31,7 +31,10 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
-      # This step checks out a copy of your repository.
+      - name: Install dependencies
+        run: |
+          sudo apt update -yqq
+          sudo apt install -yqq libcurl4 libcurl4-openssl-dev
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Go test
