--- a/.github/workflows/style_check.yml
+++ b/.github/workflows/style_check.yml
@@ -18,10 +18,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
-      - name: Install dependencies
-        run: |
-          sudo apt update -yqq
-          sudo apt install -yqq libcurl4 libcurl4-openssl-dev
+      # This step checks out a copy of your repository.
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Go vet check
@@ -29,7 +26,7 @@ jobs:
           go vet ./...
       - name: Gofmt check
         run: |
-          diff=`find . -name "*.go" | grep -v '/vendor/' | grep -v '/x/' | xargs gofmt -s -d`
+          diff=`find . -name "*.go" | xargs gofmt -s -d`
           if [[ -n "${diff}" ]]; then
                echo "Gofmt check failed :"
                echo "${diff}"
